[gd_scene load_steps=3 format=3 uid="uid://n15lqsti4eaq"]

[ext_resource type="Script" path="res://scripts/multiplayer/multiplayer_chat.gd" id="1_heqm1"]
[ext_resource type="FontFile" uid="uid://s0bpnvolv2i8" path="res://assets/fonts/PixelOperator8.ttf" id="1_uaj3j"]

[node name="multiplayer_chat" type="CanvasLayer"]
script = ExtResource("1_heqm1")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -128.0
offset_right = 640.0
offset_bottom = 128.0
grow_vertical = 2
theme_override_constants/separation = 4

[node name="ChatPanel" type="Panel" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="ChatScrollContainer" type="ScrollContainer" parent="VBoxContainer/ChatPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 3

[node name="ChatLabel" type="Label" parent="VBoxContainer/ChatPanel/ChatScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_fonts/font = ExtResource("1_uaj3j")
autowrap_mode = 3

[node name="MessageEdit" type="TextEdit" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 0.25
theme_override_fonts/font = ExtResource("1_uaj3j")
placeholder_text = "Enter message here."
